<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Version Layout -->
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <!-- Demo Version -->
	    <TextView
	        style="@style/Widget.View.LabelTextView"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical"
	        android:text="@string/demo_version" />
	       
		<TextView android:id="@+id/demo_version"
	        style="@style/Widget.View.TextView"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical|end" />
	
		<!-- Firmware Version -->
		<TextView
			style="@style/Widget.View.LabelTextView"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:text="@string/firmware_version"
			android:visibility="gone" />

		<TextView
			android:id="@+id/firmware_version"
			style="@style/Widget.View.TextView"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical|end"
			android:visibility="gone" />
        
    </LinearLayout>
    
    <!-- Main Menu Layout -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

		<!-- Menu Buttons -->

		<Button
            android:id="@+id/inventory"
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:enabled="false"
            android:text="@string/menu_inventory"
            android:textSize="20sp" />
		
		<View android:layout_width="fill_parent" android:layout_height="3dp" />

		<Button
			android:id="@+id/read_memory"
			android:layout_width="fill_parent"
			android:layout_height="50sp"
			android:enabled="false"
			android:text="@string/menu_read"
			android:textSize="20sp"
			android:visibility="gone" />
		
		<View android:layout_width="fill_parent" android:layout_height="3dp" />

		<Button
			android:id="@+id/write_memory"
			android:layout_width="fill_parent"
			android:layout_height="50sp"
			android:enabled="false"
			android:text="@string/menu_write"
			android:textSize="20sp"
			android:visibility="gone" />

		<View
			android:layout_width="fill_parent"
			android:layout_height="30dp" />

		<Button
			android:id="@+id/lock_memory"
			android:layout_width="fill_parent"
			android:layout_height="50sp"
			android:enabled="false"
			android:text="@string/menu_lock"
			android:textSize="20sp"
			android:visibility="gone" />

		<Button
			android:id="@+id/option"
			android:layout_width="fill_parent"
			android:layout_height="50sp"
			android:enabled="false"
			android:text="@string/menu_option"
			android:textSize="20sp" />

		<View
			android:layout_width="fill_parent"
			android:layout_height="134dp" />

		<Button
			android:id="@+id/exit"
			android:layout_width="match_parent"
			android:layout_height="50sp"
			android:enabled="false"
			android:text="@string/menu_exit"
			android:textSize="20sp" />

	</LinearLayout>

    <!-- Logo -->

</LinearLayout>
