<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Tag List -->

    <ListView
        android:id="@+id/tag_list"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_weight="2.5"
        android:background="@drawable/border" />

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <!-- Inventory Options -->

    <TextView
        style="@style/Widget.View.LabelTextView"
        android:layout_width="290dp"
        android:layout_height="306dp"
        android:text="@string/inventory_options"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_weight="1.0"
        android:background="@drawable/border"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="3dp">

            <!-- Inventory Option -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="3dp">

                <!-- Display PC Value -->

                <CheckBox
                    android:id="@+id/display_pc"
                    style="@style/Widget.View.LabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/display_pc" />

                <!-- Continue Mode -->

                <View
                    android:layout_width="5dp"
                    android:layout_height="match_parent" />

                <CheckBox
                    android:id="@+id/continue_mode"
                    style="@style/Widget.View.LabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/continuous_mode"
                    android:visibility="visible" />

                <CheckBox
                    android:id="@+id/ascii_mode"
                    style="@style/Widget.View.LabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/ascii_mode"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp">

                <!-- Display RSSI Value -->

                <CheckBox
                    android:id="@+id/report_rssi"
                    style="@style/Widget.View.LabelTextView"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/report_rssi" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    style="@style/Widget.View.LabelTextView"
                    android:layout_width="450dp"
                    android:layout_height="23dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/power_gain" />

                <TextView
                    android:id="@+id/power_gain"
                    style="@style/Widget.View.ValueTextView"
                    android:layout_width="451dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="3dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    style="@style/Widget.View.LabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/operation_time" />

                <TextView
                    android:id="@+id/operation_time"
                    style="@style/Widget.View.ValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="3dp" />

            </LinearLayout>

            <!-- Power Gain -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp">

                <TextView
                    style="@style/Widget.View.LabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/tag_type" />

                <TextView
                    android:id="@+id/tag_type"
                    style="@style/Widget.View.ValueTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="3dp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line_color" />

            <!-- Operation Time -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line_color" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line_color" />

            <!-- Tag Type -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/split_line_color" />

        </LinearLayout>

    </ScrollView>

    <View
        android:id="@+id/report_rssi_line"
        android:layout_width="match_parent"
        android:layout_height="4dp" />

    <!-- Controls -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:orientation="horizontal" >

        <!-- Tag Count -->
        <LinearLayout
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center_vertical|center"
                android:text="@string/tag_count"
                android:textColor="@color/label_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tag_count"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="@drawable/border_black"
                android:gravity="center_vertical|center"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center_vertical|center"
                android:text="@string/tag_total_count"
                android:textColor="@color/label_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tag_total_count"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="@drawable/border_black"
                android:gravity="center_vertical|center"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:gravity="center_vertical|center"
                android:text="@string/tag_tps_count"
                android:textColor="@color/label_color"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tag_tps_count"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="@drawable/border"
                android:gravity="center_vertical|center"
                android:textColor="@color/tag_count_color"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="3dp"
            android:layout_height="3dp" />

        <!-- Buttons -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/actionhex"
                    style="@style/Widget.View.Button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:focusedByDefault="true"
                    android:text="@string/action_inventory" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.75"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/back"
                    style="@style/Widget.View.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="◀"
                    android:textSize="25dip" />

                <Button
                    android:id="@+id/clear"
                    style="@style/Widget.View.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/action_clear" />

                <Button
                    android:id="@+id/msetup"
                    style="@style/Widget.View.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/action_setup" />

                <Button
                    android:id="@+id/mask"
                    style="@style/Widget.View.Button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/action_mask"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
